--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dataconnect/generated": "link:src/dataconnect-generated",
     "@lottiefiles/dotlottie-react": "^0.14.3",
+    "@tanstack/react-query": "^5.89.0",
+    "@types/multer": "^2.0.0",
+    "axios": "^1.12.2",
+    "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
+    "firebase": "^12.2.1",
+    "firebase-tools": "^14.16.0",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
+    "mongodb": "^6.20.0",
+    "multer": "^2.0.2",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.89.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
